[gd_scene load_steps=3 format=3 uid="uid://3ejwxk5asg4n"]

[ext_resource type="Script" path="res://src/menu.gd" id="1_a0fmu"]
[ext_resource type="PackedScene" uid="uid://bri3qsfonbejf" path="res://src/morph_button.tscn" id="1_ail2i"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0fmu")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="MissionsButton" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_ail2i")]
offset_left = 512.0
offset_top = 304.0
offset_right = 640.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
text = "MISSION"
start_with_focus = true

[node name="SettingsButton" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_ail2i")]
offset_left = 512.0
offset_top = 324.0
offset_right = 640.0
offset_bottom = 324.0
text = "SETTINGS"
start_with_focus = false

[node name="CreditsButton" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_ail2i")]
offset_left = 512.0
offset_top = 344.0
offset_right = 640.0
offset_bottom = 344.0
text = "CREDITS"
start_with_focus = false

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/MissionsButton" to="." method="_on_missions_button_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_button_down"]
